syntax = "proto3";

package hrpb;

// events

message DepartmentCreated {
  string id = 1;
  string name = 2;
  string head_of_department = 3;
  int32 number_of_employees = 4;
  repeated DepartmentProject projects = 6;
}
message ProjectCreated {
  DepartmentProject project = 1;
}
message DepartmentProject {
  string id = 1;
  string name = 2;
  string duration = 3;
  int32 number_of_employees = 4;
  int32  budget = 5;
  string resources = 6;
}

message EmployeeCreated {
  string id = 1;
  string first_name = 2;
  string middle_name = 3;
  string last_name = 4;
  string email = 5;
  string date_of_birth = 6;
  string home_address = 7;
  string phone_number = 8;
  string bank = 9;
  string account_number = 10;
  int32 gross_salary = 11;
  string Department  = 12;
  string Country = 13;
  bool suspended = 14;
  bool sacked = 15;
}

message EmployeeSuspended {
  string id = 1;
  string reason = 2;
  string duration = 3;
}

message EmployeeUnsuspended {
  string id = 1;
}
message EmployeeSacked {
  string id = 1;
  string reason = 2;
}



// commands